# stock_price_alerts_backend

./: main.py  pyproject.toml
app/: db.py
test/: telegram_test.py
